Fix Swiper wrapper stretching to 100% height in some cases

--- a/assets/css/swiper.less
+++ b/assets/css/swiper.less
@@ -47,6 +47,7 @@
         flex-wrap: initial;
         margin: 0;
         justify-content: normal;
+        height: auto; // Fix for stretching to 100% height in some cases
 
         &.nested {
             margin-bottom: 0 !important;
